--- a/docs/package.json
+++ b/docs/package.json
@@ -31,8 +31,9 @@
         "vue": "^3.2.33"
     },
     "devDependencies": {
+        "@algolia/client-search": "^4.19.1",
         "@types/sass": "^1.43.1",
-        "@vitejs/plugin-vue-jsx": "^2.0.0",
+        "@vitejs/plugin-vue-jsx": "^3.0.2",
         "@vue/shared": "^3.2.33",
         "@vueuse/core": "^9.1.1",
         "chalk": "^4.1.2",
@@ -42,15 +43,15 @@
         "fast-glob": "^3.2.11",
         "markdown-it-container": "^3.0.0",
         "sass": "^1.51.0",
-        "unocss": "^0.33.5",
-        "unplugin-icons": "^0.14.3",
-        "unplugin-vue-components": "^0.19.5",
-        "unplugin-vue-define-options": "^0.6.1",
-        "vite": "^3.0.9",
-        "vite-plugin-inspect": "^0.6.0",
+        "search-insights": "^2.7.0",
+        "unocss": "^0.55.2",
+        "unplugin-vue-components": "^0.25.1",
+        "unplugin-vue-define-options": "^1.3.15",
+        "vite": "^4.4.9",
+        "vite-plugin-inspect": "^0.7.38",
         "vite-plugin-meta-env": "^1.0.0",
         "vite-plugin-mkcert": "^1.6.0",
-        "vite-plugin-pwa": "^0.12.0",
-        "vitepress": "^1.0.0-beta.5"
+        "vite-plugin-pwa": "^0.16.4",
+        "vitepress": "1.0.0-rc.4"
     }
 }
