--- a/docs/package.json
+++ b/docs/package.json
@@ -42,8 +42,10 @@
         "escape-html": "^1.0.3",
         "fast-glob": "^3.2.11",
         "markdown-it-container": "^3.0.0",
+        "postcss": "8.4.27",
         "sass": "^1.51.0",
         "search-insights": "^2.7.0",
+        "tailwindcss": "3.3.3",
         "unocss": "^0.55.2",
         "unplugin-vue-components": "^0.25.1",
         "unplugin-vue-define-options": "^1.3.15",
@@ -51,7 +53,6 @@
         "vite-plugin-inspect": "^0.7.38",
         "vite-plugin-meta-env": "^1.0.0",
         "vite-plugin-mkcert": "^1.6.0",
-        "vite-plugin-pwa": "^0.16.4",
         "vitepress": "1.0.0-rc.4"
     }
 }
