--- a/docs/package.json
+++ b/docs/package.json
@@ -36,6 +36,7 @@
         "@vitejs/plugin-vue-jsx": "^3.0.2",
         "@vue/shared": "^3.2.33",
         "@vueuse/core": "^9.1.1",
+        "autoprefixer": "10.4.14",
         "chalk": "^4.1.2",
         "consola": "^2.15.3",
         "cross-env": "^7.0.3",
