--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,7 @@
         "lib": ["esnext", "dom"],
         "paths": {
             "@/*": ["./src/*"],
-            "wei_design": ["./packages/index.ts"]
+            "seehar-design-vue": ["./packages/index.ts"]
         }
     },
     "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"],
