--- a/docs/package.json
+++ b/docs/package.json
@@ -19,7 +19,6 @@
         "serve": "cross-env NODE_ENV=production vitepress serve . --port 5001"
     },
     "dependencies": {
-        "seehar-design-vue": "npm:seehar-design-vue@latest",
         "arraybuffer-loader": "^1.0.8",
         "axios": "^0.27.2",
         "clipboard-copy": "^4.0.1",
@@ -46,6 +45,7 @@
         "markdown-it-container": "^3.0.0",
         "postcss": "8.4.27",
         "search-insights": "^2.7.0",
+        "seehar-design-vue": "0.0.2",
         "tailwindcss": "3.3.3",
         "unocss": "^0.55.2",
         "unplugin-vue-components": "^0.25.1",
