--- a/docs/package.json
+++ b/docs/package.json
@@ -45,7 +45,7 @@
         "markdown-it-container": "^3.0.0",
         "postcss": "8.4.27",
         "search-insights": "^2.7.0",
-        "seehar-design-vue": "0.0.2",
+        "seehar-design-vue": "^0.0.3",
         "tailwindcss": "3.3.3",
         "unocss": "^0.55.2",
         "unplugin-vue-components": "^0.25.1",
