--- a/docs/package.json
+++ b/docs/package.json
@@ -1,9 +1,9 @@
 {
-    "name": "@seehar/seehar-design-vue",
+    "name": "seehar-design-vue",
     "private": false,
     "version": "1.0.0",
     "author": "seehar@qq.com",
-    "description": "Wei Design - A Vue.js 3 UI library",
+    "description": "Seehar Design Vue - A Vue.js 3 UI library",
     "license": "ISC",
     "keywords": [
         "seehar",
@@ -28,6 +28,7 @@
         "normalize.css": "^8.0.1",
         "nprogress": "^0.2.0",
         "prismjs": "^1.28.0",
+        "seehar-design-vue": "npm:seehar-design-vue@latest",
         "vue": "^3.2.33"
     },
     "devDependencies": {
@@ -45,7 +46,6 @@
         "markdown-it-container": "^3.0.0",
         "postcss": "8.4.27",
         "search-insights": "^2.7.0",
-        "seehar-design-vue": "^0.0.3",
         "tailwindcss": "3.3.3",
         "unocss": "^0.55.2",
         "unplugin-vue-components": "^0.25.1",
