--- a/package.json
+++ b/package.json
@@ -1,117 +1,121 @@
 {
-    "name": "seehar-design-vue",
-    "private": false,
-    "packageManager": "pnpm@7.6.0",
-    "version": "0.0.4",
-    "author": "seehar",
-    "description": "Seehar Design Vue - A Vue.js 3 UI library",
-    "license": "ISC",
-    "keywords": [
-        "seehar-design-vue",
-        "seehar design vue",
-        "seehar",
-        "vue",
-        "vue3",
-        "vite",
-        "vite3",
-        "Vue.js 3 UI library",
-        "Seehar Design Vue - A Vue.js 3 UI library",
-        "javascript"
-    ],
-    "scripts": {
-        "cz": "git-cz",
-        "start": "npm run dev",
-        "dev": "vite",
-        "lib:build": "vue-tsc --noEmit && vite build",
-        "docs:dev": "npm run -C docs dev",
-        "docs:build": "npm run -C docs build",
-        "preview": "vite preview",
-        "clean:lib": "rimraf lib",
-        "clean:modules": "rimraf node_modules",
-        "prepare": "husky install",
-        "lint": "eslint --ext .vue,.js,.jsx,.ts,.tsx  --ignore-path .gitignore --fix packages",
-        "format": "prettier .  --write",
-        "release": "standard-version",
-        "release:alpha": "standard-version --prerelease alpha",
-        "release:rc": "standard-version --prerelease rc",
-        "release:major": "npm run release -- --release-as major",
-        "release:minor": "npm run release -- --release-as minor",
-        "release:patch": "npm run release -- --release-as patch"
+  "name": "seehar-design-vue",
+  "private": false,
+  "packageManager": "pnpm@7.6.0",
+  "version": "0.0.4",
+  "author": "seehar",
+  "description": "Seehar Design Vue - A Vue.js 3 UI library",
+  "license": "ISC",
+  "keywords": [
+    "seehar-design-vue",
+    "seehar design vue",
+    "seehar",
+    "vue",
+    "vue3",
+    "vite",
+    "vite3",
+    "Vue.js 3 UI library",
+    "Seehar Design Vue - A Vue.js 3 UI library",
+    "javascript"
+  ],
+  "scripts": {
+    "cz": "git-cz",
+    "start": "npm run dev",
+    "dev": "vite",
+    "lib:build": "vue-tsc --noEmit && vite build",
+    "docs:dev": "npm run -C docs dev",
+    "docs:build": "npm run -C docs build",
+    "preview": "vite preview",
+    "clean:lib": "rimraf lib",
+    "clean:modules": "rimraf node_modules",
+    "prepare": "husky install",
+    "lint": "eslint --ext .vue,.js,.jsx,.ts,.tsx  --ignore-path .gitignore --fix packages",
+    "format": "prettier .  --write",
+    "release": "standard-version",
+    "release:alpha": "standard-version --prerelease alpha",
+    "release:rc": "standard-version --prerelease rc",
+    "release:major": "npm run release -- --release-as major",
+    "release:minor": "npm run release -- --release-as minor",
+    "release:patch": "npm run release -- --release-as patch"
+  },
+  "homepage": "https://seehar.github.io/eehar-design-vue/",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/seehar/eehar-design-vue.git"
+  },
+  "files": [
+    "lib/*",
+    "packages/*",
+    "README.md",
+    "package.json"
+  ],
+  "main": "./lib/seehar-design-vue.umd.js",
+  "module": "./lib/seehar-design-vue.mjs",
+  "exports": {
+    ".": {
+      "import": "./lib/seehar-design-vue.mjs",
+      "require": "./lib/seehar-design-vue.umd.js"
     },
-    "homepage": "https://seehar.github.io/eehar-design-vue/",
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/seehar/eehar-design-vue.git"
-    },
-    "files": [
-        "lib/*",
-        "packages/*",
-        "README.md",
-        "package.json"
-    ],
-    "main": "./lib/seehar-design-vue.umd.js",
-    "module": "./lib/seehar-design-vue.mjs",
-    "exports": {
-        ".": {
-            "import": "./lib/seehar-design-vue.mjs",
-            "require": "./lib/seehar-design-vue.umd.js"
-        },
-        "./lib/style.css": "./lib/style.css"
-    },
-    "peerDependencies": {
-        "vue": "^3.2.33"
-    },
-    "dependencies": {
-        "dayjs": "^1.11.4"
-    },
-    "devDependencies": {
-        "@commitlint/cli": "^17.0.0",
-        "@commitlint/config-conventional": "^17.0.0",
-        "@types/node": "^18.0.0",
-        "@types/sass": "^1.43.1",
-        "@typescript-eslint/eslint-plugin": "^5.27.0",
-        "@typescript-eslint/parser": "^5.27.0",
-        "@vitejs/plugin-vue": "^3.0.3",
-        "@vitejs/plugin-vue-jsx": "^2.0.0",
-        "@vueuse/core": "^10.4.1",
-        "autoprefixer": "^10.4.14",
-        "chalk": "^4.1.2",
-        "commitizen": "^4.2.4",
-        "cross-env": "^7.0.3",
-        "cz-conventional-changelog": "^3.3.0",
-        "eslint": "^8.17.0",
-        "eslint-config-prettier": "^8.5.0",
-        "eslint-define-config": "^1.5.0",
-        "eslint-plugin-prettier": "^4.0.0",
-        "eslint-plugin-vue": "^9.1.0",
-        "husky": "^8.0.1",
-        "postcss": "^8.4.27",
-        "prettier": "^2.6.2",
-        "prettier-plugin-tailwindcss": "^0.4.1",
-        "rimraf": "^3.0.2",
-        "sass": "^1.49.7",
-        "standard-version": "^9.5.0",
-        "tailwindcss": "^3.3.3",
-        "typescript": "^4.7.2",
-        "unplugin-auto-import": "^0.16.6",
-        "vite": "^4.1.4",
-        "vite-plugin-dts": "^1.2.0",
-        "vite-plugin-md": "^0.15.0",
-        "vite-plugin-meta-env": "^1.0.0",
-        "vue": "^3.3.4",
-        "vue-tsc": "^0.40.1"
-    },
-    "config": {
-        "commitizen": {
-            "path": "cz-conventional-changelog"
-        }
-    },
-    "husky": {
-        "hooks": {
-            "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
-        }
-    },
-    "engines": {
-        "node": ">=16.0.0"
+    "./lib/style.css": "./lib/style.css"
+  },
+  "peerDependencies": {
+    "vue": "^3.2.33"
+  },
+  "dependencies": {
+    "@rushstack/eslint-patch": "^1.3.3",
+    "dayjs": "^1.11.4"
+  },
+  "devDependencies": {
+    "@commitlint/cli": "^17.0.0",
+    "@commitlint/config-conventional": "^17.0.0",
+    "@tsconfig/node18": "^18.2.1",
+    "@types/node": "^18.0.0",
+    "@types/sass": "^1.43.1",
+    "@typescript-eslint/eslint-plugin": "^5.27.0",
+    "@typescript-eslint/parser": "^5.27.0",
+    "@vitejs/plugin-vue": "^3.0.3",
+    "@vitejs/plugin-vue-jsx": "^2.0.0",
+    "@vue/tsconfig": "^0.4.0",
+    "@vueuse/core": "^10.4.1",
+    "autoprefixer": "^10.4.14",
+    "chalk": "^4.1.2",
+    "commitizen": "^4.2.4",
+    "cross-env": "^7.0.3",
+    "cz-conventional-changelog": "^3.3.0",
+    "eslint": "^8.17.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-define-config": "^1.5.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-vue": "^9.1.0",
+    "husky": "^8.0.1",
+    "postcss": "^8.4.27",
+    "prettier": "^2.6.2",
+    "prettier-plugin-tailwindcss": "^0.4.1",
+    "rimraf": "^3.0.2",
+    "sass": "^1.49.7",
+    "standard-version": "^9.5.0",
+    "tailwindcss": "^3.3.3",
+    "typescript": "^4.7.2",
+    "unplugin-auto-import": "^0.16.6",
+    "vite": "^4.1.4",
+    "vite-plugin-dts": "^1.2.0",
+    "vite-plugin-md": "^0.15.0",
+    "vite-plugin-meta-env": "^1.0.0",
+    "vitest": "^0.34.3",
+    "vue": "^3.3.4",
+    "vue-tsc": "^0.40.1"
+  },
+  "config": {
+    "commitizen": {
+      "path": "cz-conventional-changelog"
     }
+  },
+  "husky": {
+    "hooks": {
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }
+  },
+  "engines": {
+    "node": ">=16.0.0"
+  }
 }
