--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -10,6 +10,6 @@
   "compilerOptions": {
     "composite": true,
     "module": "ESNext",
-    "moduleResolution": "node",
+    "moduleResolution": "node"
   }
 }
