--- a/package.json
+++ b/package.json
@@ -70,11 +70,10 @@
     "@commitlint/config-conventional": "^17.0.0",
     "@tsconfig/node18": "^18.2.1",
     "@types/node": "^18.0.0",
-    "@types/sass": "^1.43.1",
     "@typescript-eslint/eslint-plugin": "^5.27.0",
     "@typescript-eslint/parser": "^5.27.0",
-    "@vitejs/plugin-vue": "^3.0.3",
-    "@vitejs/plugin-vue-jsx": "^2.0.0",
+    "@vitejs/plugin-vue": "^4.3.4",
+    "@vitejs/plugin-vue-jsx": "^3.0.2",
     "@vue/tsconfig": "^0.4.0",
     "@vueuse/core": "^10.4.1",
     "autoprefixer": "^10.4.14",
@@ -88,18 +87,18 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^9.1.0",
     "husky": "^8.0.1",
+    "less": "^4.2.0",
     "postcss": "^8.4.27",
     "prettier": "^2.6.2",
     "prettier-plugin-tailwindcss": "^0.4.1",
     "rimraf": "^3.0.2",
-    "sass": "^1.49.7",
     "standard-version": "^9.5.0",
     "tailwindcss": "^3.3.3",
     "typescript": "^4.7.2",
     "unplugin-auto-import": "^0.16.6",
     "vite": "^4.1.4",
     "vite-plugin-dts": "^1.2.0",
-    "vite-plugin-md": "^0.15.0",
+    "vite-plugin-md": "^0.21.5",
     "vite-plugin-meta-env": "^1.0.0",
     "vitest": "^0.34.3",
     "vue": "^3.3.4",
