--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "vue": "^3.2.33"
   },
   "dependencies": {
+    "@heroicons/vue": "^2.0.18",
     "@rushstack/eslint-patch": "^1.3.3",
     "dayjs": "^1.11.4"
   },
