--- a/package.json
+++ b/package.json
@@ -94,6 +94,7 @@
     "prettier-plugin-tailwindcss": "^0.4.1",
     "rimraf": "^3.0.2",
     "standard-version": "^9.5.0",
+    "tailwind-merge": "^2.3.0",
     "tailwindcss": "^3.3.3",
     "typescript": "^4.7.2",
     "unplugin-auto-import": "^0.16.6",
