--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "seehar-design-vue",
   "private": false,
   "packageManager": "pnpm@7.6.0",
-  "version": "0.0.10",
+  "version": "0.0.11",
   "author": "seehar",
   "description": "Seehar Design Vue - A Vue.js 3 UI library",
   "license": "ISC",
@@ -22,7 +22,8 @@
     "cz": "git-cz",
     "start": "npm run dev",
     "dev": "vite",
-    "lib:build": "vue-tsc --noEmit && vite build",
+    "lib:build": "vue-tsc --noEmit &&vite build && npm run build:theme",
+    "build:theme": "ts-node ./scripts/prepareTheme.mjs",
     "docs:dev": "npm run -C docs dev",
     "docs:build": "npm run -C docs build",
     "preview": "vite preview",
@@ -97,6 +98,7 @@
     "standard-version": "^9.5.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss": "^3.3.3",
+    "ts-node": "^10.9.2",
     "typescript": "^4.7.2",
     "unplugin-auto-import": "^0.16.6",
     "vite": "^4.1.4",
