--- a/docs/package.json
+++ b/docs/package.json
@@ -32,6 +32,7 @@
   },
   "devDependencies": {
     "@algolia/client-search": "^4.19.1",
+    "@heroicons/vue": "^2.1.4",
     "@unocss/core": "^0.55.2",
     "@vitejs/plugin-vue-jsx": "^3.0.2",
     "@vue/shared": "^3.2.37",
