--- a/docs/package.json
+++ b/docs/package.json
@@ -28,11 +28,11 @@
     "normalize.css": "^8.0.1",
     "nprogress": "^0.2.0",
     "prismjs": "^1.28.0",
+    "seehar-design-vue": "npm:seehar-design-vue@latest",
     "vue": "^3.4.27"
   },
   "devDependencies": {
     "@algolia/client-search": "^4.19.1",
-    "@heroicons/vue": "^2.1.4",
     "@unocss/core": "^0.55.2",
     "@vitejs/plugin-vue-jsx": "^3.0.2",
     "@vue/shared": "^3.2.37",
